<resources>
    <string name="app_name">Lab5 - Andrii Koval</string>
    <string name="inverse_button">1. Inverse</string>
    <string name="adjust_one_color_button">2. One color adjustment</string>
    <string name="red_green_blue_button">3. Split image into red, green and blue</string>
    <string name="combine_images_button">4. Combine 2 images</string>
    <string name="matrix_filters_button">5. Image matrix manipulation</string>
    <string name="watermark_button">6. Watermark manipulation</string>
    <string name="red_check">Red</string>
    <string name="green_check">Green</string>
    <string name="blue_check">Blue</string>
    <string name="original_image">Original</string>
    <string name="red_image">Red</string>
    <string name="green_image">Green</string>
    <string name="blue_image">Blue</string>
    <string name="filter_blur">Blur</string>
    <string name="filter_sharpness">Sharp</string>
    <string name="filter_median">Median</string>
    <string name="filter_erosion_and_growth">Erosion and growth</string>
    <string name="filter_sobel">Sobel</string>
    <string name="encode">Encode string and get key</string>
    <string name="decode">Decode image and get secret</string>
</resources>