<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatrixManipulationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="601dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView5"
                style="@style/image_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/original_image" />

            <ImageView
                android:id="@+id/src"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView6"
                style="@style/image_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_blur" />

            <ImageView
                android:id="@+id/imageBlur"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView7"
                style="@style/image_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_sharpness" />

            <ImageView
                android:id="@+id/imageSharpness"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView8"
                style="@style/image_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_median" />

            <ImageView
                android:id="@+id/imageMedian"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView9"
                style="@style/image_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_erosion_and_growth" />

            <ImageView
                android:id="@+id/imageErosionAndGrowth"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView10"
                style="@style/image_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_sobel" />

            <ImageView
                android:id="@+id/imageSobel"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>